# Darklight

baseq2/: config.cfg
baseq2/shaders/: diffuseonly.hlsl
src/: CMakeLists.txt
src/game/: q_shared.h
src/ref_d3d/: CMakeLists.txt  d3d_2d.cpp  d3d_frame.cpp  d3d_image.cpp  d3d_local.h  d3d_main.cpp  d3d_matrix.cpp  d3d_model.cpp  d3d_shader.cpp  tinydx.h  window.cpp
src/ref_gl/: gl_rmain.c
tools/: QE4.ilk  qbsp3.ilk  qrad3.ilk  qvis3.ilk
